--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "query-string": "^9.1.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "tailwind-merge": "^2.5.5"
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.5",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
