--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.6",
     "@headlessui/react": "^2.2.0",
     "axios": "^1.7.8",
     "clsx": "^2.1.1",
